examples/test/testpolicy702.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy702
  namespace: namespace339
spec:
  podSelector:
    matchLabels:
      key24: value1
      key34: value44
      key5: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value6
      podSelector:
        matchLabels:
          key16: value9
          key27: value0
          key38: value7
